Bluprints for wall, wall hole, and doorway

--- a/Wrath_of_Suicider/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Wrath_of_Suicider/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -131,7 +131,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -139,14 +139,14 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Wallhole.Wallhole
-OpenAssetsAtExit=/Game/Blueprints/Wall.Wall
-OpenAssetsAtExit=/Game/Blueprints/Doorway.Doorway
+CleanShutdown=True
+OpenAssetsAtExit=/Game/blueprints/Wall.Wall
+OpenAssetsAtExit=/Game/blueprints/Wall_hole.Wall_hole
+OpenAssetsAtExit=/Game/blueprints/Doorway.Doorway
 
 [RootWindow]
 ScreenPosition=X=800.000 Y=500.000
-WindowSize=X=1295.000 Y=735.000
+WindowSize=X=1300.000 Y=740.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -163,7 +163,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/patri/Documents/Unreal Project for Jason/Wrath-of-the-Suicider/Wrath_of_Suicider/Content/
+UNR=../../../../../../Users/patri/Documents/Unreal Project for Jason/Wrath-of-the-Suicider/Wrath_of_Suicider/Content/TopDownBP/Maps
 BRUSH=../../../../../../Users/patri/Documents/Unreal Project for Jason/Wrath-of-the-Suicider/Wrath_of_Suicider/Content/
 FBX=../../../../../../Users/patri/Documents/Unreal Project for Jason/Wrath-of-the-Suicider/Wrath_of_Suicider/Content/
 FBXAnim=../../../../../../Users/patri/Documents/Unreal Project for Jason/Wrath-of-the-Suicider/Wrath_of_Suicider/Content/
@@ -967,6 +967,10 @@ SceneOutliner.TimeStamp=2020.09.11-16.19.57
 SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2020.09.11-16.19.51
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2020.09.11-16.19.47
+BlueprintGraph.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2020.09.11-16.19.51
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
@@ -1043,19 +1047,48 @@ BP_Sky_Sphere_C.Replication=True
 BP_Sky_Sphere_C.Collision=True
 BP_Sky_Sphere_C.Input=True
 BP_Sky_Sphere_C.Actor=True
+Wall_hole_C.Tick=True
+Wall_hole_C.Replication=True
+Wall_hole_C.Rendering=True
+Wall_hole_C.Collision=True
+Wall_hole_C.Actor=True
+Wall_hole_C.Input=True
+Wall_hole_C.TransformCommon=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/Doorway
-MRUItem1=/Game/Blueprints/Wall
-MRUItem2=/Game/Blueprints/Wallhole
+MRUItem1=/Game/blueprints/Wall_hole
+MRUItem2=/Game/Blueprints/Wall
+MRUItem3=/Game/Blueprints/Wallhole
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/Doorway.Doorway;
+RecentlyPlaced=/Game/blueprints/Doorway.Doorway;
+RecentlyPlaced=/Game/blueprints/Wall.Wall;
+RecentlyPlaced=/Game/blueprints/Wall_hole.Wall_hole;
 RecentlyPlaced=/Game/Blueprints/Wallhole.Wallhole;
-RecentlyPlaced=/Game/Blueprints/Wall.Wall;
 
 [DetailPropertyExpansion]
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bSCCUseGlobalSettings=False
+bAutomaticallyCheckoutOnAssetModification=False
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+
+[MessageLog]
+LastLogListing=LoadErrors
+
+[/Script/UnrealEd.BlueprintEditorOptions]
+bHideUnrelatedNodes=False
 
