--- a/Wrath_of_Suicider/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Wrath_of_Suicider/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -131,7 +131,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=
+ContentBrowserTab1.SelectedPaths=/Game/blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -141,12 +141,10 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/blueprints/Wall.Wall
-OpenAssetsAtExit=/Game/blueprints/Wall_hole.Wall_hole
-OpenAssetsAtExit=/Game/blueprints/Doorway.Doorway
 
 [RootWindow]
 ScreenPosition=X=800.000 Y=500.000
-WindowSize=X=1300.000 Y=740.000
+WindowSize=X=1310.000 Y=750.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -971,6 +969,12 @@ BlueprintGraph.TimeStamp=2020.09.11-16.19.47
 BlueprintGraph.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2020.09.11-16.19.51
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+Voice.TimeStamp=2020.09.11-16.19.58
+Voice.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2020.09.11-16.19.53
+MovieSceneCapture.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2020.09.11-16.19.57
+TextureEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
@@ -1054,14 +1058,115 @@ Wall_hole_C.Collision=True
 Wall_hole_C.Actor=True
 Wall_hole_C.Input=True
 Wall_hole_C.TransformCommon=True
+TopDownCharacter_C.TransformCommon=True
+TopDownCharacter_C.Animation=True
+TopDownCharacter_C.Mesh=True
+TopDownCharacter_C.Clothing=True
+TopDownCharacter_C.Physics=True
+TopDownCharacter_C.Collision=True
+TopDownCharacter_C.MasterPoseComponent=True
+TopDownCharacter_C.Lighting=True
+TopDownCharacter_C.ClothingSimulation=True
+TopDownCharacter_C.Rendering=True
+TopDownCharacter_C.SkinWeights=True
+TopDownCharacter_C.Navigation=True
+TopDownCharacter_C.VirtualTexture=True
+TopDownCharacter_C.Tags=True
+TopDownCharacter_C.Activation=True
+TopDownCharacter_C.Cooking=True
+TopDownCharacter_C.Character Movement (General Settings)=True
+TopDownCharacter_C.Character Movement: Walking=True
+TopDownCharacter_C.Character Movement: Jumping / Falling=True
+TopDownCharacter_C.Character Movement (Networking)=True
+TopDownCharacter_C.Character Movement: Swimming=True
+TopDownCharacter_C.Character Movement: Flying=True
+TopDownCharacter_C.Character Movement: Custom Movement=True
+TopDownCharacter_C.Character Movement (Rotation Settings)=True
+TopDownCharacter_C.Character Movement: Physics Interaction=True
+TopDownCharacter_C.Character Movement=True
+TopDownCharacter_C.Character Movement: Avoidance=True
+TopDownCharacter_C.RootMotion=True
+TopDownCharacter_C.Character Movement: NavMesh Movement=True
+TopDownCharacter_C.NavMovement=True
+TopDownCharacter_C.Velocity=True
+TopDownCharacter_C.PlanarMovement=True
+TopDownCharacter_C.MovementComponent=True
+TopDownCharacter_C.Shape=True
+TopDownCharacter_C.Character=True
+TopDownCharacter_C.Camera=True
+TopDownCharacter_C.Pawn=True
+TopDownCharacter_C.Replication=True
+TopDownCharacter_C.Input=True
+TopDownCharacter_C.Actor=True
+TopDownCharacter_C.Materials=True
+pickupable_C.Tick=True
+pickupable_C.Replication=True
+pickupable_C.Rendering=True
+pickupable_C.Collision=True
+pickupable_C.Actor=True
+pickupable_C.Input=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compositing=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+InstancedStaticMeshComponent.Variable=True
+InstancedStaticMeshComponent.TransformCommon=True
+InstancedStaticMeshComponent.Sockets=True
+InstancedStaticMeshComponent.StaticMesh=True
+InstancedStaticMeshComponent.Instances=True
+InstancedStaticMeshComponent.InstancedStaticMeshComponent=True
+InstancedStaticMeshComponent.Culling=True
+InstancedStaticMeshComponent.Physics=True
+InstancedStaticMeshComponent.Collision=True
+InstancedStaticMeshComponent.Lighting=True
+InstancedStaticMeshComponent.Rendering=True
+InstancedStaticMeshComponent.Navigation=True
+InstancedStaticMeshComponent.VirtualTexture=True
+InstancedStaticMeshComponent.Tags=True
+InstancedStaticMeshComponent.ComponentReplication=True
+InstancedStaticMeshComponent.Cooking=True
+InstancedStaticMeshComponent.Events=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+pickupable_C.TransformCommon=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Doorway
-MRUItem1=/Game/blueprints/Wall_hole
-MRUItem2=/Game/Blueprints/Wall
-MRUItem3=/Game/Blueprints/Wallhole
+MRUItem0=/Game/assets/swordmaterial
+MRUItem1=/Game/blueprints/pickupable
+MRUItem2=/Game/assets/pixil-frame-0
+MRUItem3=/Game/Blueprints/Wall
+MRUItem4=/Game/assets/planemesh
+MRUItem5=/Game/assets/sword
+MRUItem6=/Game/Blueprints/Doorway
+MRUItem7=/Game/blueprints/Wall_hole
+MRUItem8=/Game/Blueprints/Wallhole
 
 [PlacementMode]
+RecentlyPlaced=/Game/blueprints/pickupable.pickupable;
 RecentlyPlaced=/Game/blueprints/Doorway.Doorway;
 RecentlyPlaced=/Game/blueprints/Wall.Wall;
 RecentlyPlaced=/Game/blueprints/Wall_hole.Wall_hole;
@@ -1091,4 +1196,75 @@ LastLogListing=LoadErrors
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[AssetEditorToolkitTabLocation]
+/Game/blueprints/Wall_hole.Wall_hole=1
+/Game/blueprints/Doorway.Doorway=1
+/Game/assets/swordmaterial.swordmaterial=1
+/Game/blueprints/pickupable.pickupable=1
+/Game/assets/pixil-frame-0.pixil-frame-0=1
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+
+[DetailCategoriesAdvanced]
+Texture2D.Compositing=True
 
