Getting Player veiwport

--- a/Wrath_of_Suicider/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Wrath_of_Suicider/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -139,8 +139,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/blueprints/Wall.Wall
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=800.000 Y=500.000
@@ -982,6 +981,8 @@ MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
 [/Script/UnrealEd.MaterialEditorOptions]
 bShowGrid=False
 bHideUnrelatedNodes=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
 bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
@@ -1061,17 +1062,30 @@ StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
 StaticMeshActor.StaticMesh=True
 StaticMeshActor.Materials=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
 StaticMeshActor.Physics=True
 StaticMeshActor.Collision=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
 StaticMeshActor.Lighting=True
 StaticMeshActor.Rendering=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Navigation=True
 StaticMeshActor.Navigation=True
 StaticMeshActor.VirtualTexture=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
 StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
+StaticMeshActor.Cooking=True
 StaticMeshActor.Replication=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
 StaticMeshActor.Actor=True
 Wallhole_C.Tick=True
 Wallhole_C.Replication=True
@@ -1102,13 +1116,22 @@ StaticMeshComponent.Events=True
 K2Node_GetInputAxisValue.Input=True
 K2Node_InputAxisEvent.Input=True
 SceneComponent.Variable=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
 SceneComponent.TransformCommon=True
 SceneComponent.Sockets=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
 SceneComponent.Rendering=True
 SceneComponent.Tags=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
 SceneComponent.ComponentReplication=True
 SceneComponent.Activation=True
+SceneComponent.Activation=True
 SceneComponent.Cooking=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
 SceneComponent.Events=True
 MyPlayer_C.TransformCommon=True
 TopDownCharacter_C.Tick=True
@@ -1124,19 +1147,34 @@ TopDownController_C.Actor=True
 TopDownController_C.Input=True
 K2Node_InputAction.Input=True
 PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
 PreviewMaterial.Material=True
 PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
 PreviewMaterial.Translucency=True
 PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
 PreviewMaterial.Usage=True
 PreviewMaterial.Mobile=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
 PreviewMaterial.ForwardShading=True
 PreviewMaterial.Tessellation=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
 PreviewMaterial.Group Sorting=True
 PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
 PreviewMaterial.Refraction=True
 PreviewMaterial.Lightmass=True
+PreviewMaterial.Lightmass=True
 PreviewMaterial.Previewing=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
 PreviewMaterial.ImportSettings=True
 MyController_C.PlayerController=True
 MyController_C.Tick=True
@@ -1187,19 +1225,6 @@ BoxComponent.Tags=True
 BoxComponent.ComponentReplication=True
 BoxComponent.Cooking=True
 BoxComponent.Events=True
-StaticMeshActor.TransformCommon=True
-StaticMeshActor.StaticMesh=True
-StaticMeshActor.Materials=True
-StaticMeshActor.Physics=True
-StaticMeshActor.Collision=True
-StaticMeshActor.Lighting=True
-StaticMeshActor.Rendering=True
-StaticMeshActor.Navigation=True
-StaticMeshActor.VirtualTexture=True
-StaticMeshActor.Tags=True
-StaticMeshActor.Cooking=True
-StaticMeshActor.Replication=True
-StaticMeshActor.Actor=True
 tempcollider_C.Tick=True
 tempcollider_C.Replication=True
 tempcollider_C.Rendering=True
@@ -1316,15 +1341,6 @@ Texture2D.File Path=True
 Texture2D.Adjustments=True
 Texture2D.LevelOfDetail=True
 Texture2D.Compositing=True
-SceneComponent.Variable=True
-SceneComponent.TransformCommon=True
-SceneComponent.Sockets=True
-SceneComponent.Rendering=True
-SceneComponent.Tags=True
-SceneComponent.ComponentReplication=True
-SceneComponent.Activation=True
-SceneComponent.Cooking=True
-SceneComponent.Events=True
 InstancedStaticMeshComponent.Variable=True
 InstancedStaticMeshComponent.TransformCommon=True
 InstancedStaticMeshComponent.Sockets=True
@@ -1342,22 +1358,241 @@ InstancedStaticMeshComponent.Tags=True
 InstancedStaticMeshComponent.ComponentReplication=True
 InstancedStaticMeshComponent.Cooking=True
 InstancedStaticMeshComponent.Events=True
-PreviewMaterial.PhysicalMaterial=True
-PreviewMaterial.Material=True
-PreviewMaterial.PhysicalMaterialMask=True
-PreviewMaterial.Translucency=True
-PreviewMaterial.TranslucencySelfShadowing=True
-PreviewMaterial.Usage=True
-PreviewMaterial.Mobile=True
-PreviewMaterial.ForwardShading=True
-PreviewMaterial.Tessellation=True
-PreviewMaterial.Group Sorting=True
-PreviewMaterial.PostProcessMaterial=True
-PreviewMaterial.Refraction=True
-PreviewMaterial.Lightmass=True
-PreviewMaterial.Previewing=True
-PreviewMaterial.ImportSettings=True
 pickupable_C.TransformCommon=True
+CryptoKeysSettings.Encryption=True
+CryptoKeysSettings.Signing=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+GameplayTagsSettings.GameplayTags=True
+GameplayTagsSettings.Advanced Replication=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Packaging=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Blueprints=True
+ProjectPackagingSettings.Prerequisites=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AssetManagerSettings.Asset Manager=True
+AssetManagerSettings.Redirects=True
+AssetToolsSettings.Asset Tools=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.Gameplay Tasks=True
+AISystem.EQS=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AudioSettings.Dialogue=True
+AudioSettings.Audio=True
+AudioSettings.Mix=True
+AudioSettings.Quality=True
+ChaosSolverSettings.GameInstance=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CookerSettings.Editor=True
+CrowdManager.Config=True
+DebugCameraControllerSettings.General=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Framerate=True
+Engine.Timecode=True
+Engine.Screenshots=True
+HierarchicalLODSettings.HLODSystem=True
+InputSettings.Bindings=True
+InputSettings.ViewportProperties=True
+InputSettings.Mobile=True
+InputSettings.Virtual Keyboard (Mobile)=True
+InputSettings.Console=True
+LandscapeSettings.Layers=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Tick=True
+RecastNavMesh.Collision=True
+NavigationSystemV1.Navigation=True
+NavigationSystemV1.NavigationSystem=True
+NavigationSystemV1.Navigation Enforcing=True
+NavigationSystemV1.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+NetworkSettings.replication=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Replication=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.Broadphase=True
+PhysicsSettings.ChaosPhysics=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.VirtualTextures=True
+RendererSettings.Reflections=True
+RendererSettings.ForwardRenderer=True
+RendererSettings.Lighting=True
+RendererSettings.Tessellation=True
+RendererSettings.Translucency=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.Debugging=True
+RendererSettings.VR=True
+RendererSettings.Experimental=True
+RendererSettings.Editor=True
+RendererSettings.RayTracing=True
+RendererSettings.ShaderPermutationReduction=True
+RendererSettings.MobileShaderPermutationReduction=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+RendererOverrideSettings.Miscellaneous=True
+SlateSettings.ConstraintCanvas=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.LevelStreaming=True
+StreamingSettings.General=True
+StreamingSettings.Deprecated Settings=True
+TutorialSettings.Tutorials=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Hardware Cursors=True
+UserInterfaceSettings.Software Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+UserInterfaceSettings.Widgets=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+BlueprintEditorProjectSettings.Blueprints=True
+BlueprintEditorProjectSettings.Actors=True
+ClassViewerProjectSettings.ClassVisibilityManagement=True
+ProxyLODMeshSimplificationSettings.General=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+SkeletalMeshSimplificationSettings.General=True
+StructViewerProjectSettings.StructVisibilityManagement=True
+TextureImportSettings.VirtualTextures=True
+UMGEditorProjectSettings.Compiler=True
+UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
+AndroidRuntimeSettings.APK Packaging=True
+AndroidRuntimeSettings.App Bundles=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.Advanced APK Packaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.DaydreamAppTile=True
+AndroidRuntimeSettings.Input=True
+AndroidRuntimeSettings.GraphicsDebugger=True
+AndroidRuntimeSettings.Audio=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.FileSystem=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.OS Info=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Devices=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.Extra PList Data=True
+IOSRuntimeSettings.Required Icons=True
+IOSRuntimeSettings.Optional Icons=True
+IOSRuntimeSettings.LaunchScreen=True
+IOSRuntimeSettings.Audio=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+LinuxTargetSettings.Audio=True
+LuminRuntimeSettings.Audio=True
+LuminRuntimeSettings.MPK Packaging=True
+LuminRuntimeSettings.Runtime=True
+LuminRuntimeSettings.Magic Leap App Tile=True
+LuminRuntimeSettings.Distribution Signing=True
+LuminRuntimeSettings.Build=True
+LuminRuntimeSettings.Advanced MPK Packaging=True
+LuminRuntimeSettings.AdvancedBuild=True
+LuminRuntimeSettings.Rendering=True
+MagicLeapSDKSettings.SDKConfig=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.OS Info=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+AvfMediaSettings.Debug=True
+GooglePADRuntimeSettings.Packaging=True
+ImgMediaSettings.General=True
+ImgMediaSettings.Caching=True
+ImgMediaSettings.EXR=True
+ImgMediaSettings.Proxies=True
+LevelSequenceEditorSettings.Tracks=True
+LevelSequenceEditorSettings.Playback=True
+MagicLeapSettings.General=True
+MagicLeapARPinSettings.ARPin=True
+MoviePipelinePIEExecutorSettings.Startup=True
+MoviePipelineInProcessExecutorSettings.Startup=True
+MovieRenderPipelineProjectSettings.Movie Render Pipeline=True
+NiagaraSettings.Niagara=True
+NiagaraSettings.Scalability=True
+NiagaraEditorSettings.Niagara=True
+NiagaraEditorSettings.SimulationOptions=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+SteamVREditorSettings.SteamVR Input=True
+SteamVREditorSettings.SteamVR Editor Settings=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
+MyPlayer_C.Pawn=True
+MyPlayer_C.Camera=True
+MyPlayer_C.Rendering=True
+MyPlayer_C.Replication=True
+MyPlayer_C.Collision=True
+MyPlayer_C.Input=True
+MyPlayer_C.Actor=True
+MySimpleAI_C.TransformCommon=True
+MySimpleAI_C.Pawn=True
+MySimpleAI_C.Camera=True
+MySimpleAI_C.Rendering=True
+MySimpleAI_C.Replication=True
+MySimpleAI_C.Collision=True
+MySimpleAI_C.Input=True
+MySimpleAI_C.Actor=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/assets/swordmaterial
@@ -1386,6 +1621,8 @@ MeshComponent=
 CapsuleComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/TopDownBP/Blueprints/MySimpleAI.MySimpleAI;
+RecentlyPlaced=/Game/TopDownBP/Blueprints/MyPlayer.MyPlayer;
 RecentlyPlaced=/Game/blueprints/pickupable.pickupable;
 RecentlyPlaced=/Game/blueprints/Doorway.Doorway;
 RecentlyPlaced=/Game/blueprints/Wall.Wall;
@@ -1396,6 +1633,11 @@ RecentlyPlaced=/Game/Blueprints/Wallhole.Wallhole;
 /Game/TopDownBP/Blueprints/M_Cursor_Decal.M_Cursor_Decal=1
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
 /Game/TopDownBP/Blueprints/BasicEnemy.BasicEnemy=1
+/Game/blueprints/Wall_hole.Wall_hole=1
+/Game/blueprints/Doorway.Doorway=1
+/Game/assets/swordmaterial.swordmaterial=1
+/Game/blueprints/pickupable.pickupable=1
+/Game/assets/pixil-frame-0.pixil-frame-0=1
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -1416,17 +1658,6 @@ LastLogListing=LoadErrors
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
-
-[/Script/UnrealEd.MaterialEditorOptions]
-bHideUnrelatedNodes=False
-bUseUnsortedMenus=False
-
-[AssetEditorToolkitTabLocation]
-/Game/blueprints/Wall_hole.Wall_hole=1
-/Game/blueprints/Doorway.Doorway=1
-/Game/assets/swordmaterial.swordmaterial=1
-/Game/blueprints/pickupable.pickupable=1
-/Game/assets/pixil-frame-0.pixil-frame-0=1
 
 [MaterialEditor]
 PrimType=1
@@ -1487,4 +1718,7 @@ bMaterialQualityUsed[2]=0
 
 [DetailCategoriesAdvanced]
 Texture2D.Compositing=True
+
+[DetailMultiObjectNodeExpansion]
+CryptoKeysSettings=True
 
