I made a speed variable for the player and i put the ai in the level. The speed variable is really fast to show that the ai will track to the best route

--- a/Wrath_of_Suicider/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Wrath_of_Suicider/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -92,6 +92,7 @@ LastExecutedLaunchName=DESKTOP-2MT95C4
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=1600,Y=1000)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -131,7 +132,6 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -139,11 +139,13 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MyController.MyController
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MySimpleAI.MySimpleAI
 
 [RootWindow]
 ScreenPosition=X=800.000 Y=500.000
-WindowSize=X=1310.000 Y=750.000
+WindowSize=X=1315.000 Y=755.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1593,17 +1595,20 @@ MySimpleAI_C.Replication=True
 MySimpleAI_C.Collision=True
 MySimpleAI_C.Input=True
 MySimpleAI_C.Actor=True
+K2Node_VariableGet.DefaultValueCategory=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/assets/swordmaterial
-MRUItem1=/Game/blueprints/pickupable
-MRUItem2=/Game/assets/pixil-frame-0
-MRUItem3=/Game/Blueprints/Wall
-MRUItem4=/Game/assets/planemesh
-MRUItem5=/Game/assets/sword
-MRUItem6=/Game/Blueprints/Doorway
-MRUItem7=/Game/blueprints/Wall_hole
-MRUItem8=/Game/Blueprints/Wallhole
+MRUItem0=/Game/TopDownBP/Blueprints/MySimpleAI
+MRUItem1=/Game/TopDownBP/Blueprints/MyController
+MRUItem2=/Game/assets/swordmaterial
+MRUItem3=/Game/blueprints/pickupable
+MRUItem4=/Game/assets/pixil-frame-0
+MRUItem5=/Game/Blueprints/Wall
+MRUItem6=/Game/assets/planemesh
+MRUItem7=/Game/assets/sword
+MRUItem8=/Game/Blueprints/Doorway
+MRUItem9=/Game/blueprints/Wall_hole
+MRUItem10=/Game/Blueprints/Wallhole
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -1654,7 +1659,7 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
