I made the ai have the mesh of the player and i started on the rotating the ai, but something is a little off. I also have the ai a new material that has a different color

--- a/Wrath_of_Suicider/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Wrath_of_Suicider/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -139,8 +139,11 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MyController.MyController
+OpenAssetsAtExit=/Game/Mannequin/Character/Materials/Police.Police
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownController.TopDownController
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MySimpleAI.MySimpleAI
 
 [RootWindow]
@@ -1061,6 +1064,7 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Move,InputSettings.Bindings.AxisMappings.RotationKey,
 BoxComponent=BoxComponent.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
+SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1596,34 +1600,89 @@ MySimpleAI_C.Collision=True
 MySimpleAI_C.Input=True
 MySimpleAI_C.Actor=True
 K2Node_VariableGet.DefaultValueCategory=True
+MySimpleAI_C.Tick=True
+MyController_C.Default=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Materials=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.MasterPoseComponent=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.ClothingSimulation=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.VirtualTexture=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+StaticMeshComponent.Materials=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+SkeletalMeshComponent.SkeletalMesh=True
+SkeletalMeshComponent.Optimization=True
+SkeletalMeshComponent.MaterialParameters=True
+SkeletalMeshComponent.HLOD=True
+SkeletalMeshComponent.Mobile=True
+SkeletalMeshComponent.AssetUserData=True
+FloatingPawnMovement.Variable=True
+FloatingPawnMovement.Sockets=True
+FloatingPawnMovement.FloatingPawnMovement=True
+FloatingPawnMovement.NavMovement=True
+FloatingPawnMovement.Velocity=True
+FloatingPawnMovement.PlanarMovement=True
+FloatingPawnMovement.MovementComponent=True
+FloatingPawnMovement.Tags=True
+FloatingPawnMovement.ComponentReplication=True
+FloatingPawnMovement.Activation=True
+FloatingPawnMovement.Cooking=True
+FloatingPawnMovement.Events=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/TopDownBP/Blueprints/MySimpleAI
-MRUItem1=/Game/TopDownBP/Blueprints/MyController
-MRUItem2=/Game/assets/swordmaterial
-MRUItem3=/Game/blueprints/pickupable
-MRUItem4=/Game/assets/pixil-frame-0
-MRUItem5=/Game/Blueprints/Wall
-MRUItem6=/Game/assets/planemesh
-MRUItem7=/Game/assets/sword
-MRUItem8=/Game/Blueprints/Doorway
-MRUItem9=/Game/blueprints/Wall_hole
-MRUItem10=/Game/Blueprints/Wallhole
+MRUItem1=/Game/TopDownBP/Blueprints/MyAIController
+MRUItem2=/Game/TopDownBP/Blueprints/MyController
+MRUItem3=/Game/TopDownBP/Blueprints/TopDownController
+MRUItem4=/Game/Mannequin/Character/Materials/Police
+MRUItem5=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem6=/Game/assets/swordmaterial
+MRUItem7=/Game/blueprints/pickupable
+MRUItem8=/Game/assets/pixil-frame-0
+MRUItem9=/Game/Blueprints/Wall
+MRUItem10=/Game/assets/planemesh
+MRUItem11=/Game/assets/sword
+MRUItem12=/Game/Blueprints/Doorway
+MRUItem13=/Game/blueprints/Wall_hole
+MRUItem14=/Game/Blueprints/Wallhole
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[13]\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
-StaticMeshComponent=
-MeshComponent=
+PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CapsuleComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
+SkeletalMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SkinnedMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/TopDownBP/Blueprints/MySimpleAI.MySimpleAI;
@@ -1643,6 +1702,9 @@ RecentlyPlaced=/Game/Blueprints/Wallhole.Wallhole;
 /Game/assets/swordmaterial.swordmaterial=1
 /Game/blueprints/pickupable.pickupable=1
 /Game/assets/pixil-frame-0.pixil-frame-0=1
+/Game/TopDownBP/Blueprints/MyController.MyController=1
+/Game/TopDownBP/Blueprints/MySimpleAI.MySimpleAI=0
+/Game/TopDownBP/Blueprints/MyAIController.MyAIController=0
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
