Making sure everything commits to branch before merge

--- a/Wrath_of_Suicider/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Wrath_of_Suicider/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,17 +134,17 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/assets
+ContentBrowserTab1.SelectedPaths=/Game/blueprints
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=800.000 Y=500.000
-WindowSize=X=1331.000 Y=771.000
+WindowSize=X=1336.000 Y=776.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -978,6 +978,8 @@ TextureEditor.TimeStamp=2020.09.11-16.19.57
 TextureEditor.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2020.09.11-16.19.50
 ExternalImagePicker.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2020.09.11-16.19.57
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
